clang/test/BSC/Positive/Generic/StructAndFunction/return_type_generic_struct1/return_type_generic_struct1.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

struct MyStruct<T> {
  T res;
};

struct MyStruct<T1> foo<T1, T2>(struct MyStruct<T1> *this, T2 a) {
  return *this;
}

int main() {
  struct MyStruct<int> p;
  foo<int, int>(&p, 12);
  return 0;  
}